# ons-rooster-backend

./: .env.example  .gitignore  .tmp-pytest.txt  Dockerfile  README.md  backend.py  docker-compose.portainer.secrets.yml  docker-compose.yml  pyproject.toml
src/ons_backend/: __main__.py  app.py  clients.py  config.py  credential_export.py  models.py  service.py  storage.py
tests/: test_app_flow.py  test_fcm_config.py  test_roster_parsing.py  test_storage.py
tests/data/: expected_export_2026-06.json  roster.html
